<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tap Dat</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Tap Dat!</string>
    <string name="login_button">Log In</string>
    <string name="title_activity_tip">Tip Amount</string>
    <string name="tip_title">Select Tip Amount</string>
    <string name="tip1">$1 Tip - Some Fries</string>
    <string name="tip2">$2 Tip - A shake</string>
    <string name="tip5">$5 Tip - Burger + Shake</string>
    <string name="tip10">$10 Tip - A whole lot of fun</string>
    <string name="tip20">$20 Tip - Ballin</string>
    <string name="tip_button_string">Tap Dat</string>
    <string name="title_activity_tap_ready">Ready for Dat Tap</string>
    <string name="title_activity_tip_success">Thanks for the Tap!</string>
    <string name="tipAgain">One More Time!</string>
    <string name="tipAmountDefault">$1 Tip!  WOOT!</string>
    <string name="logo_desc">TDA Logo</string>
    <string name="title_activity_write_tag">WriteTag</string>
    <string name="write_tag_button">write</string>
    <string name="title_activity_log_in_to_tap">LogInToTap</string>
    <string name="title_activity_register_to_tap">RegisterToTap</string>

    
    <string name="user_email">Your Email</string>
    <string name="user_password">Password</string>

    <string name="login">Log In</string>
    <string name="welcome_title">Howdy</string>
    <string name="no_tip">Select a tip</string>
    
</resources>
